Archive2/de/f54de84472ced7/output
main.cpp:6:16: error: use of undeclared identifier 'std'
  Tp* allocate(std::size_t n);
               ^
main.cpp:7:26: error: use of undeclared identifier 'std'
  void deallocate(Tp* p, std::size_t n);
                         ^
2 errors generated.
